# homework_06

./: .gitlab-ci.yml  README.md  db.sqlite3  diagram.drawio  manage.py  pyproject.toml
.github/workflows/: ci.yml  django-tests.yml
network_manager/: admin.py  apps.py  forms.py  models.py  tasks.py  tests.py  urls.py  views.py
network_manager/migrations/: 0001_initial.py
network_manager/templates/: base.html  manager_template.html  user_template.html
network_manager/templates/network_manager/: add_dedicated_provider.html  add_external_ip.html  add_mikrotik_gw.html  add_mobile_provider.html  add_network_device.html  add_service.html  add_site.html  contract_confirm_delete.html  contract_detail.html  contract_form.html  contracts.html  dedicated_providers.html  dedicated_providers_list.html  edit_dedicated_provider.html  edit_external_ip.html  edit_mikrotik_gw.html  edit_mobile_provider.html  edit_network_device.html  edit_service.html  edit_site.html  external_ips.html  external_ips_list.html  home.html  mikrotik_gws.html  mikrotik_gws_list.html  mobile_providers.html  mobile_providers_list.html  network_device_list.html  network_devices.html  service_list.html  services.html  site_list.html  sites.html
network_manager/templates/registration/: login.html
network_manager_project/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
